--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   font_awesome_flutter: ^10.2.1
+  get: ^4.6.5
   get_it: ^7.2.0
   go_router: ^10.1.2
   google_fonts: ^5.1.0
